--- a/.github/workflows/update_requirements.yml
+++ b/.github/workflows/update_requirements.yml
@@ -5,7 +5,10 @@ on:
     branches:
       - '**'  
     paths:
-      - '**/*.py'  
+      - '**/*.py'
+
+permissions:
+  contents: write
 
 jobs:
   update-requirements:
