--- a/.github/workflows/update_requirements.yml
+++ b/.github/workflows/update_requirements.yml
@@ -3,7 +3,7 @@ name: Update requirements.txt
 on:
   push:
     branches:
-      - '**'  
+      - '**'
     paths:
       - '**/*.py'
 
@@ -21,20 +21,7 @@ jobs:
       with:
         python-version: '3.11'
 
-    - name: Cache Python packages
-      uses: actions/cache@v4
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Update requirements.txt
+    - name: Generate requirements.txt
       run: |
         pip freeze > requirements.txt
 
